lógica terminada